updated deduplication endpoint

--- a/openg2p_registration/views/openg2p_registration.xml
+++ b/openg2p_registration/views/openg2p_registration.xml
@@ -175,6 +175,8 @@
                                     <field name="id" />
                                     <field name="firstname"/>
                                     <field name="lastname"/>
+                                    <field name="display_address"/>
+<!--                                    <field name="bank_account_id"/>-->
                                 </tree>
                             </field>
                             <group name="internal_notes_right">
