--- a/openg2p_disbursement_advice/views/openg2p_disbursement_main.xml
+++ b/openg2p_disbursement_advice/views/openg2p_disbursement_main.xml
@@ -34,6 +34,7 @@
                                         <field name="date_end" class="oe_inline"/>
                                     </div>
                             </group>
+                                <field name="note"/>
                         </group>
                     </sheet>
                     <div class="oe_chatter">
