--- a/openg2p_registration/views/openg2p_registration.xml
+++ b/openg2p_registration/views/openg2p_registration.xml
@@ -19,9 +19,9 @@
                     <field name="location_id" invisible="1"/>
                     <field name="attendance" invisible="1"/>
                     <field name="regression_and_progression" string="R&amp;P"/>
-                    <field name="total_quality" string="Quality"/>
-                    <field name="total_equity" string="Equity"/>
-                    <field name="grand_total" string="Grand Total"/>
+                    <field name="total_quality" string="Total Quality"/>
+                    <field name="total_equity" string="Total Equity"/>
+                    <field name="grand_total" string="Grand Total (LE)"/>
                 </tree>
             </field>
         </record>
@@ -396,7 +396,7 @@
                                     A = <field name="regression_and_progression"/><br />
                                     B = <field name="total_quality"/><br />
                                     C = <field name="total_equity"/><br />
-                                    Grand Total = <field name="grand_total"/><br />
+                                    Grand Total (LE)= <field name="grand_total"/><br />
                                     <div class="o_kanban_record_bottom mt4">
                                         <div class="oe_kanban_bottom_left">
                                             <div class="float-left mr4" groups="base.group_user">
