[UPDATE] Changes in API (#93)
* beneficiary school 4 fields added

* map instead of rigid fields

* map instead of rigid fields (revised)

* school map complete

* Submission to registration

* Bank fields in registration

* bank fields in registration

* bank account in regd done

* bank account in UI fixed

* deduplication_code

* added payment integration

* payment hub new

* changes on views

* payment changes

* payment

* changes in bank fields

* made minor changes

* changes on model base

* batch update

* batch ui

* single transaction

* Single and Batch Transfer

* single and batch transaction completed

* ui part not working for batch tranasaction

* batch transaction check completion

* [Module] ODK Connector (#10)

* ODK Connector update

* No submodule

* [FEAT] Age Filter for Beneficiaries (#6)

* [FEAT] Bank fields in Registration (#8)

* beneficiary school 4 fields added

* map instead of rigid fields

* map instead of rigid fields (revised)

* school map complete

* Submission to registration

* Bank fields in registration

* bank fields in registration

* bank account in regd done

* bank account in UI fixed

* comment removal

* uncommenting rohnaks

* formatting changes

* [FEAT] ODK Submission -> Registration and Organisation Fields (#5)

* beneficiary school 4 fields added

* map instead of rigid fields

* map instead of rigid fields (revised)

* school map complete

* Submission to registration

* submission to registration

* map in progress

* mapping complete

* create_registration_from_odk in process

* ODK->REGD success

* ODK->REGD complete

* ODK->REGD complete

* filter and bulk update done

* code rearrange, comment removal

* indentation

* all files formatted

* formatted all files

* changes in xml

* checking bank_account_id

* payment hub done

* created branch

* added new menu and sub-menus

* bank field

* testing

* action-menu fixed

* changes on payment hub

* csv upload to s3

* showing bank account only for selected b

--- a/openg2p_disbursement_advice/views/openg2p_disbursement_batch_transaction.xml
+++ b/openg2p_disbursement_advice/views/openg2p_disbursement_batch_transaction.xml
@@ -79,7 +79,7 @@
             <field name="arch" type="xml">
                 <form>
                     <group>
-                        <field name="file_url" widget="url" readonly="1" text="Click to see CSV File" attrs="{'invisible': [('file_url', '=', False)]}"/>
+                        <field name="result_file" widget="text" readonly="1" text="Click to download CSV File" attrs="{'invisible': [('result_file', '=', False)]}"/>
                         <button string="Get CSV URL" name="bulk_transfer_detailed_status" type="object" class="btn-primary"/>
                     </group>
 
