--- a/openg2p/views/openg2p_beneficiary.xml
+++ b/openg2p/views/openg2p_beneficiary.xml
@@ -113,8 +113,8 @@
 
                         <group>
                             <group>
-                                <field name="location_id" placeholder="Location" domain="[('child_ids','=', False)]"
-                                       options="{'no_create_edit': True}"/>
+<!--                                <field name="location_id" placeholder="Location" domain="[('child_ids','=', False)]"-->
+<!--                                       options="{'no_create_edit': True}" invisible="1"/>-->
                                 <label for="street" string="Address"/>
                                 <div class="o_address_format">
                                     <div class="oe_edit_only">
@@ -132,13 +132,19 @@
                                 </div>
                             </group>
                             <group>
-                                <field name="othernames" placeholder="Other Names"/>
+<!--                                <field name="othernames" placeholder="Other Names"/>-->
                                 <field name="phone" widget="phone"/>
                                 <field name="mobile" widget="phone"/>
                                 <field name="email" widget="email" context="{'gravatar_image': True}"/>
                                 <field name="category_id" widget="many2many_tags"
                                        options="{'color_field': 'color', 'no_create_edit': True}"
                                        placeholder="Tags..."/>
+                            </group>
+                            <group string="Disbursement Details">
+                                <field name="regression_and_progression" string="Regression And Progression (A)"/>
+                                <field name="total_quality" string="Total Quality (B)"/>
+                                <field name="total_equity" string="Total Equity (C)"/>
+                                <field name="grand_total" string="Grand Total (LE)"/>
                             </group>
                         </group>
                         <notebook colspan="4">
@@ -150,23 +156,23 @@
                                         <field name="passport_id"/>
                                     </group>
                                     <group string="Social" name="social" priority="2">
-                                        <field name="title" options='{"no_open": True}'/>
-                                        <field name="gender"/>
-                                        <field name="marital"/>
-                                        <field name="emergency_contact"/>
-                                        <field name="emergency_phone"/>
+<!--                                        <field name="title" options='{"no_open": True}'/>-->
+<!--                                        <field name="gender"/>-->
+<!--                                        <field name="marital"/>-->
+<!--                                        <field name="emergency_contact"/>-->
+<!--                                        <field name="emergency_phone"/>-->
                                         <field name="lang"/>
                                     </group>
-                                    <group string="Birth">
-                                        <field name="birthday"/>
-                                        <field name="age"/>
-                                        <field name="birth_city"/>
-                                        <field name="birth_state_id" context="{'country_id': birth_country_id}"
-                                               options="{'no_create_edit': True}"/>
-                                        <field name="birth_country_id" options="{'no_create_edit': True}"/>
-                                    </group>
-                                    <group string="Misc">
-                                    </group>
+<!--                                    <group string="Birth">-->
+<!--                                        <field name="birthday"/>-->
+<!--                                        <field name="age"/>-->
+<!--                                        <field name="birth_city"/>-->
+<!--                                        <field name="birth_state_id" context="{'country_id': birth_country_id}"-->
+<!--                                               options="{'no_create_edit': True}"/>-->
+<!--                                        <field name="birth_country_id" options="{'no_create_edit': True}"/>-->
+<!--                                    </group>-->
+<!--                                    <group string="Misc">-->
+<!--                                    </group>-->
                                 </group>
                             </page>
                             <page string="Identities" name="identities">
@@ -201,16 +207,12 @@
                         </group>
 
                         <group string="Organization">
-                            <field name="org_custom_field">
+                            <field name="org_custom_field" nolabel="1">
                                 <tree editable="bottom">
                                     <field name="field_name"/>
                                     <field name="field_value"/>
                                 </tree>
                             </field>
-                            <field name="regression_and_progression" string="Regression And Progression"/>
-                            <field name="total_quality" string="Total Quality"/>
-                            <field name="total_equity" string="Total Equity"/>
-                            <field name="grand_total" string="Grand Total (LE)"/>
                         </group>
                     </sheet>
                     <div class="o_attachment_preview"/>
