[FIX] Exception handling while fetching token (#95)
* pull from master

* ui fixes and exception handling

* black formatting

* removed redundant code

* ui fixes and exception handling

* black formatting

--- a/openg2p_registration/views/openg2p_registration.xml
+++ b/openg2p_registration/views/openg2p_registration.xml
@@ -106,8 +106,8 @@
                         </div>
                         <group>
                             <group>
-<!--                                <field name="location_id" placeholder="Location"-->
-<!--                                       options="{'no_create_edit': True}" invisible="1"/>-->
+                               <field name="location_id" placeholder="Location"
+                                      options="{'no_create_edit': True}" invisible="1"/>
                                 <label for="street" string="Address"/>
                                 <div class="o_address_format">
                                     <div class="oe_edit_only">
