detailed payment status

--- a/openg2p_disbursement_advice/views/transaction_menu.xml
+++ b/openg2p_disbursement_advice/views/transaction_menu.xml
@@ -30,4 +30,10 @@
         sequence="8"
         parent="transaction_menu"
         action="action_file_transaction"/>
+    <menuitem
+        id="detailed_status"
+        name="Detailed Batch Status"
+        sequence="9"
+        parent="transaction_menu"
+        action="action_detailed_payment_status"/>
 </odoo>
