--- a/openg2p_task/views/menu.xml
+++ b/openg2p_task/views/menu.xml
@@ -6,59 +6,65 @@
               action="action_openg2p_task"
               sequence="1"/>
 
+    <menuitem id="menu_openg2p_webhook"
+              name="OpenG2P Webhooks"
+              action="action_openg2p_webhook"
+              parent="menu_openg2p_task_home"
+              sequence="2"/>
+
 
     <menuitem id="menu_openg2p_task_history"
               name="OpenG2P Task History"
               action="action_openg2p_task_history"
               parent="menu_openg2p_task_home"
-              sequence="2"/>
+              sequence="3"/>
 
 
     <menuitem id="menu_openg2p_task_others"
               name="Additional Options"
               parent="menu_openg2p_task_home"
-              sequence="3"/>
+              sequence="4"/>
 
     <menuitem id="menu_openg2p_task_type"
               name="OpenG2P Task Type"
               action="action_openg2p_task_type"
               parent="menu_openg2p_task_others"
-              sequence="4"/>
+              sequence="5"/>
 
     <menuitem id="menu_openg2p_task_role"
               name="OpenG2P Task Role"
               action="action_openg2p_task_role"
               parent="menu_openg2p_task_others"
-              sequence="5"/>
+              sequence="6"/>
 
     <menuitem id="menu_openg2p_task_subtype"
               name="OpenG2P Task Subtype"
               action="action_openg2p_task_subtype"
               parent="menu_openg2p_task_others"
-              sequence="6"/>
+              sequence="7"/>
 
 
     <menuitem id="menu_openg2p_workflow_options"
               name="Workflow Options"
               parent="menu_openg2p_task_home"
-              sequence="7"/>
+              sequence="8"/>
 
     <menuitem id="menu_openg2p_workflow_stage"
               name="OpenG2P Workflow Stage"
               action="action_openg2p_workflow_stage"
               parent="menu_openg2p_workflow_options"
-              sequence="8"/>
+              sequence="9"/>
 
     <menuitem id="menu_openg2p_workflow_type"
               name="OpenG2P Workflow Type"
               action="action_openg2p_workflow_type"
               parent="menu_openg2p_workflow_options"
-              sequence="9"/>
+              sequence="10"/>
 
     <menuitem id="menu_openg2p_workflow"
               name="OpenG2P Workflow"
               action="action_openg2p_workflow"
               parent="menu_openg2p_workflow_options"
-              sequence="10"/>
+              sequence="11"/>
 
 </odoo>
